src/objects/Market_Link_Transaction__c.object
<CustomObject>
    <description>Market Link Transaction</description>
    <fields>
        <fullName>Buyer_Name__c</fullName>
        <description>Buyer Name</description>
        <label>Buyer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CKW__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CKW</label>
        <referenceTo>CKW__c</referenceTo>
        <relationshipLabel>Market Link Transactions</relationshipLabel>
        <relationshipName>Market_Link_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Crop__c</fullName>
        <description>Crop being bought or sold</description>
        <label>Crop</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Name__c</fullName>
        <label>District Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Name__c</fullName>
        <description>Buyer or market name</description>
        <label>Market Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Income__c</fullName>
        <label>Total Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Quantity__c</fullName>
        <label>Total Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Transaction_Fee__c</fullName>
        <label>Total Transaction Fee</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Transport_Cost__c</fullName>
        <label>Total Transport Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <description>Date on which the transaction was done</description>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Type of transaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>marketSale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>buyerSale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>buy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Market Link Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Market Link Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Market Link Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>